# voiceclonedub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  voiceclonedub.example.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
examples/: README.md
scripts/: doctor.py
skills/doctor/: SKILL.md
skills/dub/: SKILL.md
src/voiceclonedub/: __init__.py  align.py  backends.py  cli.py  config.py  media.py  merge.py  pipeline.py  srt.py
tests/: test_backends.py  test_config.py  test_merge.py  test_srt.py
voiceclonedub/: __init__.py  align.py  backends.py  cli.py  config.py  media.py  merge.py  pipeline.py  srt.py
