[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceclonedub"
version = "0.1.0"
description = "Dub any video into another language in your own voice — fully local, subtitle-accurate sync, faithful translation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dalsoop" }]
keywords = ["dubbing", "tts", "voice-cloning", "translation", "video", "isochrony", "whisper", "ollama", "local"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "requests>=2.28",
]

[project.optional-dependencies]
# default local backends — install what you actually use
whisper = ["faster-whisper>=1.0"]
all = ["faster-whisper>=1.0"]

[project.scripts]
dub = "voiceclonedub.cli:main"

[project.urls]
Homepage = "https://github.com/dalsoop/voiceclonedub"
Repository = "https://github.com/dalsoop/voiceclonedub"

[tool.setuptools]
packages = ["voiceclonedub"]
